tools/tree-sitter-marmoset/test/corpus/definitions.txt
================================================================================
Simple enum definition
================================================================================

enum Direction = { North South East West }

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_variant
      name: (identifier))
    (enum_variant
      name: (identifier))
    (enum_variant
      name: (identifier))
    (enum_variant
      name: (identifier))))

================================================================================
Generic enum with variants
================================================================================

enum Option[a] = { Some(a) None }

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier))
    (enum_variant
      name: (identifier)
      (type_variable
        (identifier)))
    (enum_variant
      name: (identifier))))

================================================================================
Enum with multi-type-param and multi-field variants
================================================================================

enum Result[a, e] = { Ok(a) Err(e) }

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier)
      (identifier))
    (enum_variant
      name: (identifier)
      (type_variable
        (identifier)))
    (enum_variant
      name: (identifier)
      (type_variable
        (identifier)))))

================================================================================
Enum with multiple field variant
================================================================================

enum HttpResponse = { Ok(Int, Str) Error(Int, Str) }

--------------------------------------------------------------------------------

(source_file
  (enum_definition
    name: (identifier)
    (enum_variant
      name: (identifier)
      (type_identifier)
      (type_identifier))
    (enum_variant
      name: (identifier)
      (type_identifier)
      (type_identifier))))

================================================================================
Trait definition
================================================================================

trait Show[a] = {
  fn show(x: a) -> Str
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier))
    (trait_method_signature
      name: (identifier)
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      return_type: (type_identifier))))

================================================================================
Trait with multiple methods
================================================================================

trait Eq[a] = {
  fn eq(x: a, y: a) -> Bool
  fn ne(x: a, y: a) -> Bool
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier))
    (trait_method_signature
      name: (identifier)
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      return_type: (type_identifier))
    (trait_method_signature
      name: (identifier)
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      return_type: (type_identifier))))

================================================================================
Trait with supertraits
================================================================================

trait Ord[a]: Eq = {
  fn compare(x: a, y: a) -> Int
}

--------------------------------------------------------------------------------

(source_file
  (trait_definition
    name: (identifier)
    type_params: (type_parameter_list
      (identifier))
    supertraits: (supertrait_list
      (identifier))
    (trait_method_signature
      name: (identifier)
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      (trait_named_param
        name: (identifier)
        type: (type_variable
          (identifier)))
      return_type: (type_identifier))))

================================================================================
Shape definition
================================================================================

shape Named = {
  name: Str
}

--------------------------------------------------------------------------------

(source_file
  (shape_definition
    name: (identifier)
    (shape_field
      name: (identifier)
      type: (type_identifier))))

================================================================================
Impl block
================================================================================

impl Show[Int] = {
  fn show(x: Int) -> Str = {
    "int"
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    target: (generic_type
      name: (identifier)
      arg: (type_identifier))
    (method_definition
      name: (identifier)
      (parameter
        name: (identifier)
        type: (type_identifier))
      return_type: (type_identifier)
      body: (expr_or_block
        (block
          (expression_statement
            (string_literal
              (string_content))))))))

================================================================================
Generic impl block
================================================================================

impl[b: Show] Show[List[b]] = {
  fn show(x: List[b]) -> Str = {
    "ok"
  }
}

--------------------------------------------------------------------------------

(source_file
  (impl_block
    type_params: (impl_type_parameter_list
      (constrained_type_param
        name: (identifier)
        constraints: (constraint_list
          (identifier))))
    target: (generic_type
      name: (identifier)
      arg: (generic_type
        name: (type_identifier)
        arg: (type_variable
          (identifier))))
    (method_definition
      name: (identifier)
      (parameter
        name: (identifier)
        type: (generic_type
          name: (type_identifier)
          arg: (type_variable
            (identifier))))
      return_type: (type_identifier)
      body: (expr_or_block
        (block
          (expression_statement
            (string_literal
              (string_content))))))))

================================================================================
Extern type definition
================================================================================

extern type File

--------------------------------------------------------------------------------

(source_file
  (extern_type_definition
    name: (identifier)))

================================================================================
Extern shim block with alias and effectful signature
================================================================================

extern "std/file" as file_shim = {
  fn read(path: Str) -> Result[Bytes, FileReadError]
  fn write!(path: Str, bytes: Bytes) => Result[Unit, FileWriteError]
}

--------------------------------------------------------------------------------

(source_file
  (extern_block
    shim: (string_literal
      (string_content))
    alias: (identifier)
    (extern_fn_signature
      name: (identifier)
      (extern_parameter
        name: (identifier)
        type: (type_identifier))
      return_type: (generic_type
        name: (identifier)
        arg: (type_variable
          (identifier))
        arg: (type_variable
          (identifier))))
    (extern_fn_signature
      name: (identifier)
      (extern_parameter
        name: (identifier)
        type: (type_identifier))
      (extern_parameter
        name: (identifier)
        type: (type_variable
          (identifier)))
      return_type: (generic_type
        name: (identifier)
        arg: (type_identifier)
        arg: (type_variable
          (identifier))))))

================================================================================
Derive single trait
================================================================================

type Score = Int derive Eq

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (type_identifier)
    derive: (derive_clause
      trait: (identifier))))

================================================================================
Derive multiple traits
================================================================================

type ScoreList = Int derive Eq, Show

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (type_identifier)
    derive: (derive_clause
      trait: (identifier)
      trait: (identifier))))

================================================================================
Explicit wrapper type definition
================================================================================

type UserId = UserId(Int)

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (wrapper_type
      constructor: (identifier)
      payload: (type_identifier))))

================================================================================
Constructor-bearing sum type definition
================================================================================

type Event = { Click({ x: Int, y: Int }), Quit }

--------------------------------------------------------------------------------

(source_file
  (type_definition
    name: (identifier)
    type: (constructor_type_body
      (enum_variant
        name: (identifier)
        (record_type
          (record_type_field
            name: (identifier)
            type: (type_identifier))
          (record_type_field
            name: (identifier)
            type: (type_identifier))))
      (enum_variant
        name: (identifier)))))
