tools/tree-sitter-marmoset/test/corpus/expressions.txt
================================================================================
Identifier
================================================================================

foobar

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (identifier)))

================================================================================
Prefix not
================================================================================

!true

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (prefix_expression
      operand: (boolean_literal))))

================================================================================
Prefix negate
================================================================================

-5

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (prefix_expression
      operand: (integer_literal))))

================================================================================
Infix addition
================================================================================

5 + 3

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (integer_literal)
      right: (integer_literal))))

================================================================================
Infix all operators
================================================================================

a + b;
a - b;
a * b;
a / b;
a == b;
a != b;
a < b;
a > b;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier)))
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Operator precedence: product over sum
================================================================================

a + b * c

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (infix_expression
        left: (identifier)
        right: (identifier)))))

================================================================================
Left associativity
================================================================================

a + b + c

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (infix_expression
        left: (identifier)
        right: (identifier))
      right: (identifier))))

================================================================================
Parenthesized expression
================================================================================

(5 + 5) * 2

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (parenthesized_expression
        (infix_expression
          left: (integer_literal)
          right: (integer_literal)))
      right: (integer_literal))))

================================================================================
Function call
================================================================================

add(1, 2)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (integer_literal)
      (integer_literal))))

================================================================================
Function call with no args
================================================================================

f()

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier))))

================================================================================
Nested function calls
================================================================================

puts(fib(10))

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (call_expression
        function: (identifier)
        (integer_literal)))))

================================================================================
Named product constructor call with labeled fields and spread
================================================================================

Point(...p, x: 10)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (constructor_argument_list
        (constructor_argument_entry
          (spread_entry
            (identifier)))
        (constructor_argument_entry
          key: (identifier)
          value: (integer_literal))))))

================================================================================
Index expression
================================================================================

arr[0]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (index_expression
      object: (identifier)
      index: (integer_literal))))

================================================================================
Field access
================================================================================

p.x

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (field_access
      object: (identifier)
      field: (identifier))))

================================================================================
Method call via field access
================================================================================

x.show()

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (field_access
        object: (identifier)
        field: (identifier)))))

================================================================================
Method call with argument
================================================================================

a.eq(b)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (field_access
        object: (identifier)
        field: (identifier))
      (identifier))))

================================================================================
Pipe expression
================================================================================

crate |> restock(2)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (call_expression
        function: (identifier)
        (integer_literal)))))

================================================================================
Pipe expression with placeholder projection
================================================================================

crate |> _.bananas

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (infix_expression
      left: (identifier)
      right: (field_access
        object: (placeholder)
        field: (identifier)))))

================================================================================
If expression
================================================================================

if (x < y) { x } else { y }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (if_expression
      condition: (infix_expression
        left: (identifier)
        right: (identifier))
      consequence: (expr_or_block
        (block
          (expression_statement
            (identifier))))
      alternative: (expr_or_block
        (block
          (expression_statement
            (identifier)))))))

================================================================================
If without else
================================================================================

if (x < y) { x }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (if_expression
      condition: (infix_expression
        left: (identifier)
        right: (identifier))
      consequence: (expr_or_block
        (block
          (expression_statement
            (identifier)))))))

================================================================================
Is expression
================================================================================

x is Int

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (is_expression
      value: (identifier)
      type: (type_identifier))))

================================================================================
Function literal
================================================================================

(x, y) -> { x + y }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lambda_expression
      (lambda_parameter
        name: (identifier))
      (lambda_parameter
        name: (identifier))
      body: (expr_or_block
        (block
          (expression_statement
            (infix_expression
              left: (identifier)
              right: (identifier))))))))

================================================================================
Function literal with types
================================================================================

(x: Int, y: Int) -> { x + y }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (lambda_expression
      (lambda_parameter
        name: (identifier)
        type: (type_identifier))
      (lambda_parameter
        name: (identifier)
        type: (type_identifier))
      body: (expr_or_block
        (block
          (expression_statement
            (infix_expression
              left: (identifier)
              right: (identifier))))))))

================================================================================
Function literal with generic constraints
================================================================================

fn show_it[a: Show & Eq](x: a) -> Str = x.show()

--------------------------------------------------------------------------------

(source_file
  (fn_declaration
    name: (identifier)
    type_params: (type_parameter_list
      (constrained_type_param
        name: (identifier)
        constraints: (constraint_list
          (identifier)
          (identifier))))
    (parameter
      name: (identifier)
      type: (type_variable
        (identifier)))
    return_type: (type_identifier)
    body: (expr_or_block
      (call_expression
        function: (field_access
          object: (identifier)
          field: (identifier))))))

================================================================================
Match expression on enum
================================================================================

match x {
  case Option.Some(v): v
  case Option.None: 0
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier)
          (variable_pattern
            (identifier)))
        body: (expr_or_block
          (identifier)))
      (match_arm
        pattern: (constructor_pattern
          enum: (identifier)
          variant: (identifier))
        body: (expr_or_block
          (integer_literal))))))

================================================================================
Match expression on literals
================================================================================

match x {
  case 0: "zero"
  case 1: "one"
  case _: "other"
}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (match_expression
      value: (identifier)
      (match_arm
        pattern: (literal_pattern
          (integer_literal))
        body: (expr_or_block
          (string_literal
            (string_content))))
      (match_arm
        pattern: (literal_pattern
          (integer_literal))
        body: (expr_or_block
          (string_literal
            (string_content))))
      (match_arm
        pattern: (wildcard_pattern)
        body: (expr_or_block
          (string_literal
            (string_content)))))))

================================================================================
Try expression
================================================================================

try read()

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (try_expression
      value: (call_expression
        function: (identifier)))))

================================================================================
Try expression with wrap target
================================================================================

try parse(text) wrap file.Error.InvalidData

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (try_expression
      value: (call_expression
        function: (identifier)
        (identifier))
      target: (wrap_target
        (qualified_wrap_target
          module: (identifier)
          type: (identifier)
          variant: (identifier))))))

================================================================================
Enum constructor call
================================================================================

Option.Some(42)

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      function: (field_access
        object: (identifier)
        field: (identifier))
      (integer_literal))))
