tools/tree-sitter-marmoset/test/corpus/literals.txt
================================================================================
Integer literal
================================================================================

42

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (integer_literal)))

================================================================================
Float literal
================================================================================

3.14

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (float_literal)))

================================================================================
String literal
================================================================================

"hello world"

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (string_literal
      (string_content))))

================================================================================
Empty string literal
================================================================================

""

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (string_literal)))

================================================================================
Interpolated string literal
================================================================================

"hello #{name}!"

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (string_literal
      (string_content)
      (interpolation
        expression: (identifier))
      (string_content))))

================================================================================
Boolean true
================================================================================

true

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (boolean_literal)))

================================================================================
Boolean false
================================================================================

false

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (boolean_literal)))

================================================================================
Array literal
================================================================================

[1, 2, 3]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (array_literal
      (integer_literal)
      (integer_literal)
      (integer_literal))))

================================================================================
Empty array literal
================================================================================

[]

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (array_literal)))

================================================================================
Hash literal with string keys
================================================================================

{"one": 1, "two": 2}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (object_literal
      (object_entry
        key: (string_literal
          (string_content))
        value: (integer_literal))
      (object_entry
        key: (string_literal
          (string_content))
        value: (integer_literal)))))

================================================================================
Empty object literal
================================================================================

{}

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (object_literal)))

================================================================================
Record literal with identifier keys
================================================================================

{ x: 1, y: 2 }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (object_literal
      (object_entry
        key: (identifier)
        value: (integer_literal))
      (object_entry
        key: (identifier)
        value: (integer_literal)))))

================================================================================
Record literal with spread
================================================================================

{ ...p, x: 10 }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (object_literal
      (object_entry
        (spread_entry
          (identifier)))
      (object_entry
        key: (identifier)
        value: (integer_literal)))))

================================================================================
Record literal with punned fields and spread
================================================================================

{ ...crate, troop:, bananas: }

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (object_literal
      (object_entry
        (spread_entry
          (identifier)))
      (object_entry
        key: (identifier))
      (object_entry
        key: (identifier)))))

================================================================================
Comment
================================================================================

# this is a comment
42

--------------------------------------------------------------------------------

(source_file
  (comment)
  (expression_statement
    (integer_literal)))
